--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
     <p>{{getFormatBirthday()}}</p>
     <p>丙申年十月六日</p>
     <p>出生第{{getDaysAfterBirthday()}}天</p>
+    <p>距下一个生日还有 {{getDaysBeforeNextBirthday()}} 天</p>
 </div>
